// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when bail is not set should print the error 1`] = `
"
[4mcomponents/foo.js[24m - Kind: v1/Pod, Name: foo, Index: [0]

[31m✖ /spec must have required property 'containers'[39m

[4mcomponents/nginx.js[24m - Kind: apps/v1/Deployment, Name: nginx, Index: [0]

[31m✖ /spec must have required property 'selector'[39m

[31m✖ /spec must have required property 'template'[39m

[4mcomponents/nginx.js[24m - Kind: v1/Service, Name: nginx, Index: [1]

[31m✖ /spec/ports/0/port must be integer[39m

[31m✖ /spec/type must be equal to one of the allowed values: ["ClusterIP","ExternalName","LoadBalancer","NodePort"][39m

[31merror[39m - Found 5 errors in total
[31merror[39m - Generate failed"
`;

exports[`when bail is true should print the error 1`] = `
"
[4mcomponents/foo.js[24m - Kind: v1/Pod, Name: foo, Index: [0]

[31m✖ /spec must have required property 'containers'[39m

[4mcomponents/nginx.js[24m - Kind: apps/v1/Deployment, Name: nginx, Index: [0]

[31m✖ /spec must have required property 'selector'[39m

[31merror[39m - Found 2 errors in total
[31merror[39m - Generate failed"
`;
